# hope-core

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/hope_core/fsm/: fsm.h
lib/hope_core/switch_expression/: switch_expression.h
lib/hope_core/tuple/: compute_field_count_recursive.h  detect_fields_count.h  flat_sorted_tuple.h  flat_tuple.h  generated.h  print_tuple.h  tuple_from_struct.h  tuple_from_struct_unsafe.h  tuple_policy.h  tuple_utils.h
lib/hope_core/tuple/legacy/: tuple.h
lib/hope_core/type_traits/: any_convertible.h  detector.h  integraltypes.h  is_invokable.h  loophole.h  soa.h  type_list.h  type_list_detail.h  type_value_map.h  typelistsort.h  typemap.h  user_defined_types.h  utility.h
test/: CMakeLists.txt  Tests.cpp
test/tests/: any_convertible_test.cpp  detector_test.cpp  fieldescounttest.cpp  ref_tuple_from_struct_test.cpp  switch_expression_test.cpp  tupletest.cpp  typelisttests.cpp  typemap_test.cpp  utility_test.cpp
